<resources>
    <string name="app_name">AnAcExercize4</string>
    <string name="themoviedb_base_url">https://api.themoviedb.org/3/movie</string>
    <string name="themoviedb_popular">popular</string>
    <string name="themoviedb_api_key">653e27180c99d8aaabfade446b46ffb8</string>
    <string name="images_base_url">https://image.tmdb.org/t/p/w500</string>
    <string name="themoviedb_query_base">api_key</string>
    <string name="themoviedb_api_token">eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI2NTNlMjcxODBjOTlkOGFhYWJmYWRlNDQ2YjQ2ZmZiOCIsInN1YiI6IjVjNDhkMWUzYzNhMzY4NDc4OTg5MTZkNiIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.q3_A0sbRFaZpb3M_yY42tfMyWeul2vAMWNBLxipIUDA</string>
    <string name="overview">Overview:</string>
    <string name="ma_tv_wiki">Wikipedia:</string>
    <string name="ma_tv_released">Released:</string>
    <string name="ma_btn_movie_trailer">movie trailer</string>
    <string name="ml_tb_btn_title_grid">Grid</string>
    <string name="ml_tb_btn_title_list">List</string>
    <string name="black_panther_title">Black Panther</string>
    <string name="black_panther_description">After the death of his father, Prince T\'Challa ascends to the throne of the small African country of Wakanda. T\'Challa is also Black Panther, superhero. Now not only must he govern his country but defeat a dangerous adversary.</string>
    <string name="black_panter_wiki">Black Panther is a 2018 American superhero film based on the Marvel Comics character of the same name. Produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures, it is the eighteenth film in the Marvel Cinematic Universe (MCU). The film is directed by Ryan Coogler, who co-wrote the screenplay with Joe Robert Cole, and stars Chadwick Boseman as T\'Challa / Black Panther, alongside Michael B. Jordan, Lupita Nyong\'o, Danai Gurira, Martin Freeman, Daniel Kaluuya, Letitia Wright, Winston Duke, Angela Bassett, Forest Whitaker, and Andy Serkis. In Black Panther, T\'Challa is crowned king of Wakanda following his father\'s death, but his sovereignty is challenged by an adversary who plans to abandon the country\'s isolationist policies and begin a global revolution.</string>
    <string name="black_panter_rd">2018-01-29</string>
    <string name="black_panter_trailer">xjDjIWPwcPU</string>
    <string name="deadpool_title">Dead Pool 2</string>
    <string name="deadpool_description">Foul-mouthed mutant mercenary Wade Wilson (AKA. Deadpool), brings together a team of fellow mutant rogues to protect a young boy with supernatural abilities from the brutal, time-traveling cyborg, Cable.</string>
    <string name="deadpool_wiki">Deadpool 2 is a 2018 American superhero film based on the Marvel Comics character Deadpool, distributed by 20th Century Fox. It is the eleventh installment in the X-Men film series, and a direct sequel to the 2016 film Deadpool. The film is directed by David Leitch from a script by Rhett Reese, Paul Wernick, and Ryan Reynolds, with Reynolds starring in the title role alongside Josh Brolin, Morena Baccarin, Julian Dennison, Zazie Beetz, T.J. Miller, Brianna Hildebrand, and Jack Kesy. In the film, Deadpool forms the team X-Force to protect a young mutant from the time-traveling soldier Cable.</string>
    <string name="deadpool_rd">2018-05-10</string>
    <string name="deadpool_trailer">D86RtevtfrA</string>
    <string name="first_purge_title">First Purge</string>
    <string name="first_purge_description">America\'s third political party, the New Founding Fathers of America, comes to power and conducts an experiment: no laws for 12 hours on Staten Island. No one has to stay on the island, but $5,000 is given to anyone who does.</string>
    <string name="purge_wiki">The First Purge is a 2018 American action horror film directed by Gerard McMurray and starring Y\'lan Noel, Lex Scott Davis, Joivan Wade, Mugga, Luna Lauren Velez, Kristen Solis, and Marisa Tomei. The fourth installment in the Purge franchise, the film is a prequel depicting the origins of the first annual \"Purge\", a 12-hour span once a year in which all crime in America is legal. Written and produced by James DeMonaco, it marks the first film of the series not to be directed by him.</string>
    <string name="purge_rd">2018-07-04</string>
    <string name="purge_trailer">E-8e0cqUGTw</string>
    <string name="guardians_title">Guardians of the galaxy</string>
    <string name="guardians_descrtioption">A group of intergalactic criminals are forced to work together to stop a fanatical warrior from taking control of the universe.</string>
    <string name="guardians_wiki">Guardians of the Galaxy (retroactively referred to as Guardians of the Galaxy Vol. 1)[4][5] is a 2014 American superhero film based on the Marvel Comics superhero team of the same name, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the tenth film in the Marvel Cinematic Universe (MCU). The film was directed by James Gunn, who wrote the screenplay with Nicole Perlman, and features an ensemble cast including Chris Pratt, Zoe Saldana, Dave Bautista, Vin Diesel, and Bradley Cooper as the titular Guardians, along with Lee Pace, Michael Rooker, Karen Gillan, Djimon Hounsou, John C. Reilly, Glenn Close, and Benicio del Toro. In Guardians of the Galaxy, Peter Quill forms an uneasy alliance with a group of extraterrestrial criminals who are fleeing after stealing a powerful artifact.</string>
    <string name="guardians_rd">2014-07-21</string>
    <string name="guardians_trailer">2LIQ2-PZBC8</string>
    <string name="interstellar_title">Interstellar</string>
    <string name="interstellar_description">A team of explorers travel through a wormhole in space in an attempt to ensure humanity\'s survival.</string>
    <string name="interstellar_wiki">Interstellar is a 2014 science fiction film directed, co-written, and co-produced by Christopher Nolan. It stars Matthew McConaughey, Anne Hathaway, Jessica Chastain, Bill Irwin, Ellen Burstyn, and Michael Caine. Set in a dystopian future where humanity is struggling to survive, the film follows a group of astronauts who travel through a wormhole in search of a new home for humanity.</string>
    <string name="interstellar_rd">2014-10-26</string>
    <string name="interstellar_trailer">0vxOhd4qlnA</string>
    <string name="jurasic_title">Jurasic World</string>
    <string name="jurasic_description">A new theme park, built on the original site of Jurassic Park, creates a genetically modified hybrid dinosaur, which escapes containment and goes on a killing spree.</string>
    <string name="jurassic_wiki">Jurassic World is a 2015 American science fiction adventure film, the fourth installment of the Jurassic Park film series, and the first film in a planned Jurassic World trilogy. It was directed by Colin Trevorrow, written by Derek Connolly and Trevorrow, produced by Frank Marshall and Patrick Crowley, and stars Chris Pratt, Bryce Dallas Howard, Vincent D\'Onofrio, Ty Simpkins, Nick Robinson, Omar Sy, BD Wong, and Irrfan Khan.</string>
    <string name="jurassic_rd">2015-05-29</string>
    <string name="jurassic_trailer">ZXiahojLbOw</string>
    <string name="meg_title">Meg</string>
    <string name="meg_description">After escaping an attack by what he claims was a 70-foot shark, Jonas Taylor must confront his fears to save those trapped in a sunken submersible.</string>
    <string name="meg_wiki">The Meg is a 2018 science fiction action thriller film directed by Jon Turteltaub with a screenplay by Dean Georgaris, Jon Hoeber, and Erich Hoeber, loosely based on the 1997 book Meg: A Novel of Deep Terror by Steve Alten. The film stars Jason Statham, Li Bingbing, Rainn Wilson, Ruby Rose, Winston Chao, and Cliff Curtis. The film follows a group of scientists who encounter a 75-foot-long (23 m) megalodon shark while on a rescue mission at the floor of the Pacific Ocean.</string>
    <string name="meg_rd">2018-08-10</string>
    <string name="meg_trailer">udm5jUA-2bs</string>
    <string name="oceans_title">Ocean\'s 8</string>
    <string name="oceans_description">Debbie Ocean gathers an all-female crew to attempt an impossible heist at New York City\'s yearly Met Gala.</string>
    <string name="oceans_wiki">Ocean\'s 8 (stylized onscreen as Ocean\'s Eight) is a 2018 American heist comedy film directed by Gary Ross and written by Ross and Olivia Milch. The film is both a continuation and a spin-off from Steven Soderbergh\'s Ocean\'s trilogy and features an ensemble cast, including Sandra Bullock, Cate Blanchett, Anne Hathaway, Mindy Kaling, Sarah Paulson, Rihanna, Helena Bonham Carter, and Awkwafina. The film follows a group of women led by Debbie Ocean, the sister of Danny Ocean, who plan a sophisticated heist of the annual Met Gala at the Metropolitan Museum of Art in New York City, United States.</string>
    <string name="oceans_rd">2018-06-05</string>
    <string name="oceans_trailer">MFWF9dU5Zc0</string>
    <string name="thor_title">Thor: Ragnaroc</string>
    <string name="thor_description">Thor is imprisoned on the planet Sakaar, and must race against time to return to Asgard and stop Ragnarök, the destruction of his world, at the hands of the powerful and ruthless villain Hela.</string>
    <string name="thor_wiki">Thor: Ragnarok is a 2017 American superhero film based on the Marvel Comics character Thor, produced by Marvel Studios and distributed by Walt Disney Studios Motion Pictures. It is the sequel to 2011\'s Thor and 2013\'s Thor: The Dark World, and is the seventeenth film in the Marvel Cinematic Universe (MCU). The film is directed by Taika Waititi from a screenplay by Eric Pearson and the writing team of Craig Kyle and Christopher L. Yost, and stars Chris Hemsworth as Thor alongside Tom Hiddleston, Cate Blanchett, Idris Elba, Jeff Goldblum, Tessa Thompson, Karl Urban, Mark Ruffalo, and Anthony Hopkins. In Thor: Ragnarok, Thor must escape the alien planet Sakaar in time to save Asgard from Hela and the impending Ragnarök.</string>
    <string name="thor_rd">2017-10-10</string>
    <string name="thor_trailer">ue80QwXMRHg</string>
    <string name="infinity_title">Avengers: Infinity War</string>
    <string name="infinity_description">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</string>
    <string name="menu_open_async_task_activity">Open Async Task Activity</string>
    <string name="menu_open_thread_activity">Open Thread Handler Activity</string>
    <string name="menu_open_services_fragment">Open Services Fragment</string>
    <string name="btn_create">create</string>
    <string name="btn_start">start</string>
    <string name="btn_cancel">cancel</string>
    <string name="btn_start_service">start service</string>
    <string name="btn_start_intent_service">start intent service</string>
    <string name="stop_service">stop service</string>
    <string name="no_service_running">no service running</string>
    <string name="no_logs">no logs</string>
    <string name="download">Download</string>
</resources>