<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/ml_tb_menu_item_grid"
        android:orderInCategory="100"
        android:title="@string/ml_tb_btn_title_grid"
        android:icon="@drawable/ic_apps_black_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/ml_tb_menu_item_list"
        android:visible="false"
        android:orderInCategory="200"
        android:title="@string/ml_tb_btn_title_list"
        android:icon="@drawable/ic_clear_all_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/ml_tb_menu_item_download_list"
        android:visible="true"
        android:orderInCategory="250"
        android:title="@string/download"
        android:icon="@drawable/ic_file_download_black_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/ml_tb_menu_item_asynctask"
        android:orderInCategory="300"
        android:title="@string/menu_open_async_task_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/ml_tb_menu_item_thread"
        android:orderInCategory="400"
        android:title="@string/menu_open_thread_activity"
        app:showAsAction="never"/>
    <item
        android:id="@+id/ml_tb_menu_item_services"
        android:orderInCategory="500"
        android:title="@string/menu_open_services_fragment"
        app:showAsAction="never"/>
</menu>